--- a/demo/index.html
+++ b/demo/index.html
@@ -7,6 +7,7 @@
   <title>fiple.js demo</title>
 </head>
 <body>
+  <noscript>You need to enable JavaScript in your browser.</noscript>
   <div id="approot"></div>
   <script src="js/fiple/index.js"></script>
   <script src="js/index.js"></script>
